syntax = "proto3";

package messages.v1;

option go_package = "github.com/bd878/gallery/server/api";

service MessagesService {
  rpc GetServers(GetMessagesServersRequest) returns (GetMessagesServersResponse) {}
  rpc SaveMessage(SendMessageRequest) returns (SaveMessageResponse) {}
  rpc ReadMessage(ReadMessageRequest) returns (ReadMessageResponse) {}
}

message Message {
  uint32 id = 1;
  uint32 user_id = 2;
  string create_time = 3;
  bytes value = 4;
  string file = 5;
}

message SendMessageRequest {}

message SaveMessageResponse {
}

message ReadMessageRequest {}

message ReadMessageResponse {
}

message GetMessagesServersRequest {}

message GetMessagesServersResponse {
  repeated MessagesServer servers = 3;
}

message MessagesServer {
  string id = 1;
  string rpc_addr = 2;
  bool is_leader = 3;
}